--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^5.3.2+2
+  webview_flutter: ^0.3.22+1
+  validate: ^1.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
