--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   geolocator: ^5.3.2+2
   webview_flutter: ^0.3.22+1
   validate: ^1.7.0
+  provider: ^4.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
