--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   webview_flutter: ^0.3.22+1
   validate: ^1.7.0
   provider: ^4.3.1
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
