--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   validate: ^1.7.0
   provider: ^4.3.1
   http: ^0.12.2
+  lazy_load_scrollview: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
