--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   provider: ^4.3.1
   http: ^0.12.2
   lazy_load_scrollview: ^1.1.0
+  url_launcher: ^5.5.0
+  shared_preferences: ^0.5.8
 
 
   # The following adds the Cupertino Icons font to your application.
