--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   lazy_load_scrollview: ^1.1.0
   url_launcher: ^5.5.0
   shared_preferences: ^0.5.8
+  google_maps_flutter: ^0.5.28+1
 
 
   # The following adds the Cupertino Icons font to your application.
